<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="figo.companion.SkillsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:text="@string/first_skill_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewFirstSkill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editText1Skill" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <TextView
                android:text="@string/second_skill_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewSeccondSkill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editText2Skill" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <TextView
                android:text="@string/third_skill_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewThirdSkill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editText3Skill" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <TextView
                android:text="@string/fourth_skill_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewFourthSkill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editText4Skill" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <TextView
                android:text="@string/fifth_skill_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView11" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editText5Skill" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
